# 3d-address

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE-DICTIONARY.md  README.md  SPEC_v0.2.md  address.py  api.py  carve.py  checksum.py  dictionary.py  docker-compose.yml  encoder.py  geometry.py  requirements.txt  tests.py  tests_edge.py  validate_wordlist.py
backend/: Dockerfile  app.py  config.py  geocoding.py  ratelimit.py  requirements.txt
backend/tests/: test_api.py  test_api_validation.py
docker/: .env.example  Caddyfile.example  docker-compose.yml
docs/: API.md  DICTIONARY_PROMPT.md  FEATURES.md  INSTALL.md  PUBLISHING.md
frontend/: 40-render-config.sh  Dockerfile  about.html  config.js  index.html  site.webmanifest  sitemap.xml
protocol/: README.md  __init__.py  address.py  carve.py  checksum.py  dictionary.py  encoder.py  pyproject.toml  words.txt
protocol/tests/: conftest.py  test_vectors.py  tests.py  tests_checksum.py  tests_dictionary.py  tests_edge.py  vectors.json
static/: index.html
tests/: tests.py  tests_api.py  tests_checksum.py  tests_dictionary.py  tests_edge.py
