[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waddr"
version = "0.2.0"
description = "3D word-based address protocol — the pure encoding/decoding engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bennett" }]
keywords = ["geocoding", "addressing", "protocol", "3d", "words"]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/Raylu42x/3d-address"

# The engine lives on disk in ./ (the protocol/ directory) but installs as the
# `waddr` import package; the distribution name is also "waddr".
[tool.setuptools]
packages = ["waddr"]
package-dir = { "waddr" = "." }

# words.txt is required at runtime and must ship inside the wheel.
[tool.setuptools.package-data]
waddr = ["words.txt"]

[tool.setuptools.exclude-package-data]
waddr = ["tests/*"]
